--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -49,20 +49,20 @@ jobs:
         npm run docs && ./scripts/error_on_dirty.sh
 
   build-test-publish:
-    needs: format-taginfo-docs
+    #needs: format-taginfo-docs
     strategy:
       matrix:
         include:
-          - name: gcc-9-debug-cov
-            continue-on-error: false
-            node: 12
-            runs-on: ubuntu-20.04
-            BUILD_TOOLS: ON
-            BUILD_TYPE: Debug
-            CCOMPILER: gcc-9
-            CUCUMBER_TIMEOUT: 20000
-            CXXCOMPILER: g++-9
-            ENABLE_COVERAGE: ON
+          # - name: gcc-9-debug-cov
+          #   continue-on-error: false
+          #   node: 12
+          #   runs-on: ubuntu-20.04
+          #   BUILD_TOOLS: ON
+          #   BUILD_TYPE: Debug
+          #   CCOMPILER: gcc-9
+          #   CUCUMBER_TIMEOUT: 20000
+          #   CXXCOMPILER: g++-9
+          #   ENABLE_COVERAGE: ON
 
           - name: gcc-9-debug-asan-ubsan
             continue-on-error: false
@@ -362,7 +362,6 @@ jobs:
             ENABLE_CONAN: ON
             NODE_PACKAGE_TESTS_ONLY: ON
 
-
     name: ${{ matrix.name}}
     continue-on-error: ${{ matrix.continue-on-error }}
     runs-on: ${{ matrix.runs-on }}
@@ -459,10 +458,6 @@ jobs:
         wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C ${CMAKE_DIR}
         echo "${CMAKE_DIR}/bin" >> $GITHUB_PATH
 
-        # TBB
-        ${MASON} install tbb 2017_U7
-        echo "LD_LIBRARY_PATH=$(${MASON} prefix tbb 2017_U7)/lib/:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
-
         # ccache
         ${MASON} install ccache ${CCACHE_VERSION}
         echo "$(${MASON} prefix ccache ${CCACHE_VERSION})/bin" >> $GITHUB_PATH
@@ -486,7 +481,7 @@ jobs:
         if [ "${TARGET_ARCH}" != "i686" ] && [ "${ENABLE_CONAN}" != "ON" ]; then
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt-get update -y
-          sudo apt-get install -y libbz2-dev libxml2-dev libzip-dev liblua5.2-dev libtbb-dev libboost-all-dev
+          sudo apt-get install -y libbz2-dev libxml2-dev libzip-dev liblua5.2-dev libboost-all-dev
           if [[ -z "${CLANG_VERSION}" ]]; then
             sudo apt-get install -y ${CXXCOMPILER}
           fi
@@ -496,6 +491,32 @@ jobs:
         elif [[ $TARGET_ARCH == "i686" ]]; then
           source ./scripts/ci/before_install.${TARGET_ARCH}.sh
           echo "PKG_CONFIG_PATH=/usr/lib/i386-linux-gnu/pkgconfig:${PKG_CONFIG_PATH}" >> $GITHUB_ENV
+        fi
+
+        # TBB
+        TBB_VERSION=2021.3.0
+        if [ "${TARGET_ARCH}" != "i686" ]; then
+          if [[ "${RUNNER_OS}" == "Linux" ]]; then
+            TBB_URL="https://github.com/oneapi-src/oneTBB/releases/download/v${TBB_VERSION}/oneapi-tbb-${TBB_VERSION}-lin.tgz"
+          elif [[ "${RUNNER_OS}" == "macOS" ]]; then
+            TBB_URL="https://github.com/oneapi-src/oneTBB/releases/download/v${TBB_VERSION}/oneapi-tbb-${TBB_VERSION}-mac.tgz"
+          fi
+          wget --tries 5 ${TBB_URL} -O onetbb.tgz
+          tar zxvf onetbb.tgz
+          sudo cp -a oneapi-tbb-${TBB_VERSION}/lib/. /usr/local/lib/
+          sudo cp -a oneapi-tbb-${TBB_VERSION}/include/. /usr/local/include/
+        else
+          git clone --depth 1 --single-branch --branch v${TBB_VERSION} https://github.com/oneapi-src/oneTBB.git
+          pushd oneTBB
+          mkdir build
+          pushd build
+          export LDFLAGS="-m32"
+          cmake -DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF ..
+          VERBOSE=1 make -j${JOBS}
+          sudo make install
+          popd # build
+          popd # oneTBB
+          rm -rf oneTBB
         fi
 
     - name: Prepare build
@@ -513,6 +534,13 @@ jobs:
       run: |
         echo "Using ${JOBS} jobs"
         pushd ${OSRM_BUILD_DIR}
+
+        if  [ "$TARGET_ARCH" == "i686" ]; then
+          ENABLE_32_BIT=ON
+        else
+          ENABLE_32_BIT=OFF
+        fi
+
         cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
                  -DENABLE_CONAN=${ENABLE_CONAN:-OFF} \
                  -DENABLE_ASSERTIONS=${ENABLE_ASSERTIONS:-OFF} \
@@ -524,7 +552,8 @@ jobs:
                  -DBUILD_TOOLS=${BUILD_TOOLS:-OFF} \
                  -DENABLE_CCACHE=ON \
                  -DCMAKE_INSTALL_PREFIX=${OSRM_INSTALL_DIR} \
-                 -DENABLE_GLIBC_WORKAROUND=${ENABLE_GLIBC_WORKAROUND:-OFF}
+                 -DENABLE_GLIBC_WORKAROUND=${ENABLE_GLIBC_WORKAROUND:-OFF} \
+                 -DENABLE_32_BIT=${ENABLE_32_BIT}
         make --jobs=${JOBS}
 
         if [[ "${NODE_PACKAGE_TESTS_ONLY}" != "ON" ]]; then
