--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -149,7 +149,7 @@ jobs:
             node: 12
             runs-on: ubuntu-20.04
             BUILD_TOOLS: ON
-            BUILD_TYPE: Debug
+            BUILD_TYPE: Release
             CCOMPILER: gcc-9
             CFLAGS: "-m32 -msse2 -mfpmath=sse"
             CXXCOMPILER: g++-9
