--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -504,6 +504,8 @@ jobs:
         tar zxvf onetbb.tgz
         sudo cp -a oneapi-tbb-${TBB_VERSION}/lib/. /usr/local/lib/
         sudo cp -a oneapi-tbb-${TBB_VERSION}/include/. /usr/local/include/
+        ls -R /usr/local/lib/
+        echo "LD_LIBRARY_PATH=/usr/local/lib/ia32/:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
 
     - name: Prepare build
       run: |
