--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -154,7 +154,7 @@ jobs:
             CFLAGS: "-m32 -msse2 -mfpmath=sse"
             CXXCOMPILER: g++-9
             CXXFLAGS: "-m32 -msse2 -mfpmath=sse"
-            LDFLAGS: "-ltbb"
+            LDFLAGS: "-m32"
             TARGET_ARCH: i686
             
 
