--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -551,6 +551,11 @@ else()
   include_directories(SYSTEM ${OSMIUM_INCLUDE_DIR})
 endif()
 
+# link tbb
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ltbb")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -ltbb")
+
+
 # prefix compilation with ccache by default if available and on clang or gcc
 if(ENABLE_CCACHE AND (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU"))
   find_program(CCACHE_FOUND ccache)
