Remove EXACT from find_package if using Conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -316,15 +316,15 @@ if (ENABLE_COVERAGE)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -ftest-coverage -fprofile-arcs")
 endif()
 
-# foreach(SANITIZER ${ENABLE_SANITIZERS})
-#   message(STATUS "ADD SAN ${SANITIZER}")
-#   set(SANITIZER_FLAGS "-g -fsanitize=${SANITIZER} -fno-omit-frame-pointer")
-#   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SANITIZER_FLAGS}")
-#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SANITIZER_FLAGS}")
-#   set(OSRM_CXXFLAGS "${OSRM_CXXFLAGS} ${SANITIZER_FLAGS}")
-#   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SANITIZER_FLAGS}")
-#   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${SANITIZER_FLAGS}")
-# endforeach() 
+foreach(SANITIZER ${ENABLE_SANITIZERS})
+  message(STATUS "ADD SAN ${SANITIZER}")
+  set(SANITIZER_FLAGS "-g -fsanitize=${SANITIZER} -fno-omit-frame-pointer")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SANITIZER_FLAGS}")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SANITIZER_FLAGS}")
+  set(OSRM_CXXFLAGS "${OSRM_CXXFLAGS} ${SANITIZER_FLAGS}")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SANITIZER_FLAGS}")
+  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${SANITIZER_FLAGS}")
+endforeach() 
 
 # add_library(testlib test.cpp)
 
@@ -507,7 +507,7 @@ if(ENABLE_CONAN)
   set(Boost_UNIT_TEST_FRAMEWORK_LIBRARY "${Boost_unit_test_framework_LIB_TARGETS}")
   
   find_package(BZip2 REQUIRED EXACT ${CONAN_BZIP2_VERSION})
-  find_package(EXPAT REQUIRED EXACT ${CONAN_EXPAT_VERSION})
+  find_package(EXPAT REQUIRED)
   find_package(lua REQUIRED EXACT ${CONAN_LUA_VERSION})
   set(LUA_LIBRARIES ${lua_LIBRARIES})
 
