Remove EXACT from find_package if using Conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,6 +473,7 @@ if(ENABLE_CONAN)
     GENERATORS cmake_find_package
     KEEP_RPATHS
     NO_OUTPUT_DIRS
+    ARCH x86
   )
 
   add_dependency_includes(${CONAN_INCLUDE_DIRS_BOOST})
