--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -31,6 +31,10 @@ jobs:
     - run: npm --version
     - run: npm install --ignore-scripts
     - run: npm link --ignore-scripts
+    - run: SET PATH=%CD%\osrm-deps\lib;%PATH%
+    - run: SET OSRM_BUILD_DIR=build\%Configuration%
+    - run: CALL appveyor-build.bat
+    
 
   format-taginfo-docs:
     runs-on: ubuntu-20.04
