--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: windows-2022
     steps:
     - uses: actions/checkout@v3
+    - run: pip install conan
     - uses: actions/setup-node@v3
       with:
         node-version: 16
