--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -26,6 +26,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: pip install conan
     - run: conan --version
+    - run: cmake --version
     - uses: actions/setup-node@v3
       with:
         node-version: 16
