--- a/scripts/ci/threadsanitizer.conf
+++ b/scripts/ci/threadsanitizer.conf
@@ -10,3 +10,5 @@ race:SortableEdgeWithData
 race:StaticRTree
 race:ConcurrentIDMap
 race:ContractorNodeData::Renumber
+race:Extractor::
+race:ProcessGuidanceTurns
