--- a/scripts/ci/threadsanitizer.conf
+++ b/scripts/ci/threadsanitizer.conf
@@ -10,5 +10,4 @@ race:SortableEdgeWithData
 race:StaticRTree
 race:ConcurrentIDMap
 race:ContractorNodeData::Renumber
-race:Extractor::
-race:ProcessGuidanceTurns
+race:Extractor::run
