--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -25,17 +25,9 @@ jobs:
     steps:       
       - name: Check out the repo
         uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build container image - normal
+      - name: Build container image
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
           file: ./docker/Dockerfile
           build-args: |
             DOCKER_TAG=0.01
