--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Docker build
         run: |
-          docker build -f docker/Dockerfile . 
+          docker build --build-arg BUILD_CONCURRENCY=2 -f docker/Dockerfile . 
 
   # build-test-publish:
   #   needs: format-taginfo-docs
