--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -34,14 +34,26 @@ jobs:
     - run: npm --version
     - run: npm install --ignore-scripts
     - run: npm link --ignore-scripts
-    - uses: ilammy/msvc-dev-cmd@v1
+    - uses: microsoft/setup-msbuild@v1.1
     - name: Build
       run: |
+        ECHO NUMBER_OF_PROCESSORS^: %NUMBER_OF_PROCESSORS%
         mkdir build
         cd build
-        cmake -DENABLE_CONAN=ON  -G "NMake Makefiles" ..
-        nmake
-        nmake tests
+        cmake -DENABLE_CONAN=ON  -G "Visual Studio 16 2019" ..
+        msbuild OSRM.sln ^
+          /p:Configuration=Release ^
+          /p:Platform=x64 ^
+          /t:rebuild ^
+          /p:BuildInParallel=true ^
+          /m:%NUMBER_OF_PROCESSORS% ^
+          /toolsversion:Current ^
+          /p:PlatformToolset=v142 ^
+          /clp:Verbosity=normal ^
+          /nologo ^
+          /flp1:logfile=build_errors.txt;errorsonly ^
+          /flp2:logfile=build_warnings.txt;warningsonly
+          IF %ERRORLEVEL% EQU 1 GOTO ERROR
     
 
   format-taginfo-docs:
