--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -37,12 +37,7 @@ jobs:
     - uses: microsoft/setup-msbuild@v1.1
     - name: Build
       run: |
-        ECHO NUMBER_OF_PROCESSORS^: %NUMBER_OF_PROCESSORS%
-        mkdir build
-        cd build
-        cmake -DENABLE_CONAN=ON  -G "Visual Studio 16 2019" ..
-        msbuild OSRM.sln /p:Configuration=Release /p:Platform=x64 /t:rebuild /p:BuildInParallel=true /m:%NUMBER_OF_PROCESSORS% /toolsversion:Current /p:PlatformToolset=v142 /clp:Verbosity=normal /nologo /flp1:logfile=build_errors.txt;errorsonly /flp2:logfile=build_warnings.txt;warningsonly
-    
+        ./appveyor-build.bat
 
   format-taginfo-docs:
     runs-on: ubuntu-20.04
