Add CI for Docker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -483,19 +483,19 @@ if(ENABLE_CONAN)
 
   set(Boost_USE_STATIC_LIBS ON)
   find_package(Boost REQUIRED EXACT ${CONAN_BOOST_VERSION} COMPONENTS ${BOOST_COMPONENTS})
-  set(Boost_DATE_TIME_LIBRARY "${Boost_date_time_LIB_TARGETS}")
-  set(Boost_CHRONO_LIBRARY "${Boost_chrono_LIB_TARGETS}")
-  set(Boost_PROGRAM_OPTIONS_LIBRARY "${Boost_program_options_LIB_TARGETS}")
-  set(Boost_FILESYSTEM_LIBRARY "${Boost_filesystem_LIB_TARGETS}")
-  set(Boost_IOSTREAMS_LIBRARY "${Boost_iostreams_LIB_TARGETS}")
-  set(Boost_THREAD_LIBRARY "${Boost_thread_LIB_TARGETS}")
-  set(Boost_SYSTEM_LIBRARY "${Boost_system_LIB_TARGETS}")
-  set(Boost_ZLIB_LIBRARY "${Boost_zlib_LIB_TARGETS}")
-  set(Boost_REGEX_LIBRARY "${Boost_regex_LIB_TARGETS}")
-  set(Boost_UNIT_TEST_FRAMEWORK_LIBRARY "${Boost_unit_test_framework_LIB_TARGETS}")
+  set(Boost_DATE_TIME_LIBRARY "${Boost_date_time_LINK_LIBS}")
+  set(Boost_CHRONO_LIBRARY "${Boost_chrono_LINK_LIBS}")
+  set(Boost_PROGRAM_OPTIONS_LIBRARY "${Boost_program_options_LINK_LIBS}")
+  set(Boost_FILESYSTEM_LIBRARY "${Boost_filesystem_LINK_LIBS}")
+  set(Boost_IOSTREAMS_LIBRARY "${Boost_iostreams_LINK_LIBS}")
+  set(Boost_THREAD_LIBRARY "${Boost_thread_LINK_LIBS}")
+  set(Boost_SYSTEM_LIBRARY "${Boost_system_LINK_LIBS}")
+  set(Boost_ZLIB_LIBRARY "${Boost_zlib_LINK_LIBS}")
+  set(Boost_REGEX_LIBRARY "${Boost_regex_LINK_LIBS}")
+  set(Boost_UNIT_TEST_FRAMEWORK_LIBRARY "${Boost_unit_test_framework_LINK_LIBS}")
   
   find_package(BZip2 REQUIRED EXACT ${CONAN_BZIP2_VERSION})
-  find_package(EXPAT REQUIRED EXACT ${CONAN_EXPAT_VERSION})
+  find_package(EXPAT REQUIRED)
   find_package(lua REQUIRED EXACT ${CONAN_LUA_VERSION})
   set(LUA_LIBRARIES ${lua_LIBRARIES})
 
@@ -589,13 +589,13 @@ set(BOOST_ENGINE_LIBRARIES
   ${Boost_REGEX_LIBRARY}
   ${BOOST_BASE_LIBRARIES})
   
-  foreach(engine_lib ${BOOST_BASE_LIBRARIES})
-  if("${engine_lib}" MATCHES "^Boost.*" OR "${engine_lib}" MATCHES "^CONAN_LIB.*")
-  message(STATUS "LIB $<TARGET_LINKER_FILE:${engine_lib}>")
-    list(APPEND PKGCONFIG_DEPENDENT_LIBRARIES "$<TARGET_LINKER_FILE:${engine_lib}>")
-  endif()
-endforeach(engine_lib)
-  message(FATAL_ERROR ${BOOST_BASE_LIBRARIES})
+#   foreach(engine_lib ${BOOST_BASE_LIBRARIES})
+#   if("${engine_lib}" MATCHES "^Boost.*" OR "${engine_lib}" MATCHES "^CONAN_LIB.*")
+#   message(STATUS "LIB $<TARGET_LINKER_FILE:${engine_lib}>")
+#     list(APPEND PKGCONFIG_DEPENDENT_LIBRARIES "$<TARGET_LINKER_FILE:${engine_lib}>")
+#   endif()
+# endforeach(engine_lib)
+#   message(FATAL_ERROR ${BOOST_BASE_LIBRARIES})
 
 # Binaries
 target_link_libraries(osrm-datastore osrm_store ${Boost_PROGRAM_OPTIONS_LIBRARY})
