--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -78,14 +78,14 @@ jobs:
             OSRM_CONNECTION_RETRIES: 10
             OSRM_CONNECTION_EXP_BACKOFF_COEF: 1.5
 
-          - name: clang-5.0-debug
-            continue-on-error: false
-            node: 12
-            runs-on: ubuntu-20.04
-            BUILD_TOOLS: ON
-            BUILD_TYPE: Debug
-            CLANG_VERSION: 5.0.0
-            CUCUMBER_TIMEOUT: 60000
+      #    - name: clang-5.0-debug
+       #     continue-on-error: false
+      #      node: 12
+      #      runs-on: ubuntu-20.04
+       #     BUILD_TOOLS: ON
+  #          BUILD_TYPE: Debug
+   #         CLANG_VERSION: 5.0.0
+  #          CUCUMBER_TIMEOUT: 60000
 
           - name: clang-11.0-debug-clang-tidy
             continue-on-error: false
@@ -471,14 +471,14 @@ jobs:
         if [[ -n ${CLANG_VERSION} ]]; then
           echo "CCOMPILER=clang" >> $GITHUB_ENV
           echo "CXXCOMPILER=clang++" >> $GITHUB_ENV
-          ${MASON} install clang++ ${CLANG_VERSION}
-          echo "$(${MASON} prefix clang++ ${CLANG_VERSION})/bin" >> $GITHUB_PATH
+       #   ${MASON} install clang++ ${CLANG_VERSION}
+      #    echo "$(${MASON} prefix clang++ ${CLANG_VERSION})/bin" >> $GITHUB_PATH
           # we only enable lto for release builds
           # and therefore don't need to us ld.gold or llvm tools for linking
           # for debug builds
           if [[ ${BUILD_TYPE} == 'Release' ]]; then
-            ${MASON} install binutils 2.27
-            echo "$(${MASON} prefix binutils 2.27)/bin" >> $GITHUB_PATH
+          #  ${MASON} install binutils 2.27
+            #echo "$(${MASON} prefix binutils 2.27)/bin" >> $GITHUB_PATH
           fi
         fi
 
