--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,16 +93,16 @@ if(ENABLE_CONAN)
 
   set(Boost_USE_STATIC_LIBS ON)
   find_package(Boost REQUIRED EXACT ${CONAN_BOOST_VERSION} COMPONENTS ${BOOST_COMPONENTS})
-  set(Boost_DATE_TIME_LIBRARY "${Boost_date_time_LINK_LIBS}")
-  set(Boost_CHRONO_LIBRARY "${Boost_chrono_LINK_LIBS}")
-  set(Boost_PROGRAM_OPTIONS_LIBRARY "${Boost_program_options_LINK_LIBS}")
-  set(Boost_FILESYSTEM_LIBRARY "${Boost_filesystem_LINK_LIBS}")
-  set(Boost_IOSTREAMS_LIBRARY "${Boost_iostreams_LINK_LIBS}")
-  set(Boost_THREAD_LIBRARY "${Boost_thread_LINK_LIBS}")
-  set(Boost_SYSTEM_LIBRARY "${Boost_system_LINK_LIBS}")
-  set(Boost_ZLIB_LIBRARY "${Boost_zlib_LINK_LIBS}")
-  set(Boost_REGEX_LIBRARY "${Boost_regex_LINK_LIBS}")
-  set(Boost_UNIT_TEST_FRAMEWORK_LIBRARY "${Boost_unit_test_framework_LINK_LIBS}")
+  set(Boost_DATE_TIME_LIBRARY "${Boost_date_time_LIB_TARGETS}")
+  set(Boost_CHRONO_LIBRARY "${Boost_chrono_LIB_TARGETS}")
+  set(Boost_PROGRAM_OPTIONS_LIBRARY "${Boost_program_options_LIB_TARGETS}")
+  set(Boost_FILESYSTEM_LIBRARY "${Boost_filesystem_LIB_TARGETS}")
+  set(Boost_IOSTREAMS_LIBRARY "${Boost_iostreams_LIB_TARGETS}")
+  set(Boost_THREAD_LIBRARY "${Boost_thread_LIB_TARGETS}")
+  set(Boost_SYSTEM_LIBRARY "${Boost_system_LIB_TARGETS}")
+  set(Boost_ZLIB_LIBRARY "${Boost_zlib_LIB_TARGETS}")
+  set(Boost_REGEX_LIBRARY "${Boost_regex_LIB_TARGETS}")
+  set(Boost_UNIT_TEST_FRAMEWORK_LIBRARY "${Boost_unit_test_framework_LIB_TARGETS}")
   
   find_package(BZip2 REQUIRED EXACT ${CONAN_BZIP2_VERSION})
   find_package(EXPAT REQUIRED)
